<resources>
    <string name="app_name">NewsViews</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NewsViews</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About</string>
    <string name="menu_slideshow">Exit</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">majedict34@gmail.com</string>
    <string name="work">Now working as a android developer in sticker driver limited</string>
    <string name="degree">B.Sc(Engg.) in ICT from MBSTU</string>
    <string name="name">I AM MD. MAJEDUL ISLAM</string>
    <string name="salam">Assalamualikum</string>
    <string name="newsviews_description">NewsViews basically  fetch data from the web and show it to the end user</string>


</resources>
