<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalash_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/salam"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30dp"
        android:textStyle="bold"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/name"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30dp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/degree"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30dp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/work"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30dp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/contact"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30dp"
        android:textStyle="bold"

        />


</LinearLayout>

