<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsviews.Fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsviews.Fragment.AboutFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsviews.Fragment.ExitFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_exit" />


</navigation>